Adding connection with API, handle search input and search button

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
     <title>WeatherApp</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <h1 id="title">WeatherApp</h1>
+    <div id="search-box">
+      <h2>Search City:</h2>
+      <input type="text" id="city" placeholder="City name" />
+      <button type="submit" id="submit">Search</button>
+      <script src="index.js"></script>
+    </div>
   </body>
 </html>
